Fix issue with nav position on about-us page, create contact page and add header and footer

--- a/about-us.html
+++ b/about-us.html
@@ -14,24 +14,24 @@
 </head>
 
 <body>
-    <!--Logo and navbar with links-->
+       <!--Logo and navbar with links-->
 
-    <header>
+       <header>
         <a href="index.html">
             <h1>
                 <img src="assets/images/logo-image.png" alt="Home button" class="logo">
             </h1>
         </a>
-        <nav>
-            <ul class="menu">
+        <nav class="menu">
+            <ul>
                 <li>
                     <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="about-us.html" class="active">About Us</a>
+                    <a href="about-us.html"  class="active">About Us</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -39,7 +39,7 @@
 
     <!-- About us and Image-->
 
-    <section class="main-bg">
+    <section class="main-bg ">
         <div class="image-left">
             <img src="assets/images/image-left.jpg" width="600" height="400" alt="">
         </div>
@@ -63,7 +63,7 @@
         <h2>Our Team</h2>
 
         <div class="our-team">
-            <div id="our-team-1">
+            <div class="our-team-1">
                 <h3>Maria</h3>
                 <p>
                     Maria Tsimourdaga is a graduate of St. Kliment Ohridski University, Sofia, Bulgaria. She holds a
@@ -281,3 +281,4 @@
     <script src="https://kit.fontawesome.com/cdf0a3356f.js" crossorigin="anonymous"></script>
 
 </body>
+</html>
