--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <a href="about-us.html">About Us</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
