--- a/contact.html
+++ b/contact.html
@@ -37,47 +37,51 @@
         </nav>
     </header>
 
-    <div class="form=container-outer">
+    <div class="form-container-outer">
+        <div class="form-container-mid">
+            <div class="form-container">
 
-        <div class="form=container">
-            <form action="" method="POST">
 
-                <div>
-                    <label for="fname">First Name:</label>
-                </div>
-                <div><input type="text" id="fname" name="first_name" class="text-input" required>
-                </div>
-                <div>
-                    <label for="lname">Last Name:</label>
-                </div>
-                <div>
-                    <input type="text" id="lname" name="last_name" class="text-input" required>
-                </div>
-                <div>
-                    <label for="emaail">Email Address:</label>
-                </div>
-                <div>
-                    <input type="email" id="email" name="email_address" class="text-input" required>
-                </div>
-                <div>
-                    <label for="cnumber">Contact Number:</label>
-                </div>
-                <div>
-                    <input type="number" id="cnumber" name="contact_number" class="text-input" required>
-                </div>
-                <div>
-                    <label for="subject">Subject:</label>
-                </div>
-                <div>
-                    <input type="text" id="subject" name="subject_form" class="text-input" required>
-                </div>
-                <div>
-                    <label for="commnets">Comments:</label>
-                </div>
-                <div>
-                    <input type="text-area" id="comments" name="commnents_form" class="text-input comments" required>
-                </div>
-            </form>
+                <form action="" method="POST">
+
+                    <div>
+                        <label for="fname">First Name:</label>
+                    </div>
+                    <div><input type="text" id="fname" name="first_name" class="text-input" required>
+                    </div>
+                    <div>
+                        <label for="lname">Last Name:</label>
+                    </div>
+                    <div>
+                        <input type="text" id="lname" name="last_name" class="text-input" required>
+                    </div>
+                    <div>
+                        <label for="emaail">Email Address:</label>
+                    </div>
+                    <div>
+                        <input type="email" id="email" name="email_address" class="text-input" required>
+                    </div>
+                    <div>
+                        <label for="cnumber">Contact Number:</label>
+                    </div>
+                    <div>
+                        <input type="number" id="cnumber" name="contact_number" class="text-input" required>
+                    </div>
+                    <div>
+                        <label for="subject">Subject:</label>
+                    </div>
+                    <div>
+                        <input type="text" id="subject" name="subject_form" class="text-input subject" required>
+                    </div>
+                    <div>
+                        <label for="commnets">Comments:</label>
+                    </div>
+                    <div>
+                        <input type="text-area" id="comments" name="commnents_form" class="text-input comments"
+                            required>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 
