--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
             <div class="form-container">
 
 
-                <form action="" method="POST">
+                <form action="https://formdump.codeinstitute.net/" method="POST">
 
                     <div>
                         <label for="fname">First Name:</label>
@@ -77,8 +77,11 @@
                         <label for="commnets">Comments:</label>
                     </div>
                     <div>
-                        <input type="text-area" id="comments" name="commnents_form" class="text-input comments"
-                            required>
+                        <textarea id="comments" name="commnents_form" class="text-input comments"
+                            required></textarea>
+                    </div>
+                    <div>
+                        <input type="submit" value="Submit">
                     </div>
                 </form>
             </div>
