Update images and style for services section and about-us page

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         <!-- <h2>Services</h2> -->
 
-        <div id="services-left-1">
+        <div class="services-left-1">
             <h3>Speech Therapy</h3>
             <p>
                 Speech therapy is the science that has as its subject the study, research and application of
@@ -81,7 +81,7 @@
                 program.
             </p>
         </div>
-        <div id="services-left-2">
+        <div class="services-left-2">
             <h3>Occupational Therapy Robotics</h3>
             <p>
                 Robotics is considered as an innovative activity that begins to enter dynamically and affect the
@@ -99,7 +99,7 @@
             </p>
         </div>
         <div class="services-image">
-            <img src="assets/images/image-center.jpg" width="600" height="400" alt="">
+            <img src="assets/images/image-center-1.jpg" width="600" height="400" alt="">
         </div>
 
     </section>
@@ -155,7 +155,7 @@
             </p>
         </div>
         <div class="services-image">
-            <img src="assets/images/image-left.jpg" width="600" height="400" alt="">
+            <img src="assets/images/image-center-2.jpg" width="400" height="600" alt="">
         </div>
     </section>
 
