Add link to footer for contact.html

--- a/contact.html
+++ b/contact.html
@@ -130,7 +130,7 @@
             </div>
 
             <div id="address">
-                <h2><a href="#">Contact</a></h2>
+                <h2><a href="contact.html">Contact</a></h2>
                 <h3>Address</h3>
                 <p><i class="fa-solid fa-location-dot"></i> Vasilis Olgas 128, Thessaloniki, Greece</p>
                 <p><i class="fa-solid fa-phone"></i> 01234567890</p>
