--- a/about-us.html
+++ b/about-us.html
@@ -31,7 +31,7 @@
                     <a href="about-us.html" class="active">About Us</a>
                 </li>
                 <li>
-                    <a href="contact.html">Contact</a>
+                    <a href="contact.html">Contact Us</a>
                 </li>
             </ul>
         </nav>
@@ -269,7 +269,7 @@
             </div>
 
             <div id="address">
-                <h2><a href="contact.html">Contact</a></h2>
+                <h2><a href="contact.html">Contact Us</a></h2>
                 <h3>Address</h3>
                 <p><i class="fa-solid fa-location-dot"></i> Vasilis Olgas 128, Thessaloniki, Greece</p>
                 <p><i class="fa-solid fa-phone"></i> 01234567890</p>
