Update colors and update form

--- a/contact.html
+++ b/contact.html
@@ -89,6 +89,11 @@
                     <div>
                         <input type="submit" value="Submit">
                     </div>
+                    <div class="required-field-b">
+                        <p>
+                            <span class="required-field">*</span>Fields required
+                        </p>
+                    </div>
                 </form>
             </div>
         </div>
