Update style to sign up form

--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
 
                     </div>
                     <div>
-                        <input type="submit" value="Submit">
+                        <input type="submit" value="Submit" class="join-button">
                     </div>
                     <div class="required-field-b">
                         <p>
