Change background color to form

--- a/contact.html
+++ b/contact.html
@@ -38,63 +38,65 @@
     </header>
 
     <div class="form-container-outer">
-        <div class="form-container-mid">
-            <div class="form-container">
+        <div class="form-container-bg">
+            <div class="form-container-mid">
+                <div class="form-container">
 
 
-                <form action="https://formdump.codeinstitute.net/" method="POST" class="signup-form">
+                    <form action="https://formdump.codeinstitute.net/" method="POST" class="signup-form">
 
-                    <div class="form-control form-first">
-                        <label for="fname">First Name:<span class="required-field">*</span></label>
+                        <div class="form-control form-first">
+                            <label for="fname">First Name:<span class="required-field">*</span></label>
 
-                        <input type="text" id="fname" name="first_name" class="text-input" required>
+                            <input type="text" id="fname" name="first_name" class="text-input" required>
 
-                    </div>
-                    <div class="form-control">
-                        <label for="lname">Last Name:<span class="required-field">*</span></label>
-
-
-                        <input type="text" id="lname" name="last_name" class="text-input" required>
-
-                    </div>
-                    <div class="form-control">
-                        <label for="email">Email Address:<span class="required-field">*</span></label>
+                        </div>
+                        <div class="form-control">
+                            <label for="lname">Last Name:<span class="required-field">*</span></label>
 
 
-                        <input type="email" id="email" name="email_address" class="text-input" required>
+                            <input type="text" id="lname" name="last_name" class="text-input" required>
 
-                    </div>
-                    <div class="form-control">
-                        <label for="cnumber">Contact Number:<span class="required-field">*</span></label>
-
-
-                        <input type="number" id="cnumber" name="contact_number" class="text-input" required>
-
-                    </div>
-                    <div class="form-control">
-                        <label for="subject">Subject:<span class="required-field">*</span></label>
+                        </div>
+                        <div class="form-control">
+                            <label for="email">Email Address:<span class="required-field">*</span></label>
 
 
-                        <input type="text" id="subject" name="subject_form" class="text-input subject" required>
+                            <input type="email" id="email" name="email_address" class="text-input" required>
 
-                    </div>
-                    <div class="form-control">
-                        <label for="commnets">Comments:<span class="required-field">*</span></label>
+                        </div>
+                        <div class="form-control">
+                            <label for="cnumber">Contact Number:<span class="required-field">*</span></label>
 
 
-                        <textarea id="comments" cols="20" rows="5" maxlength="500" name="commnents_form"
-                            class="text-input comments" required></textarea>
+                            <input type="number" id="cnumber" name="contact_number" class="text-input" required>
 
-                    </div>
-                    <div>
-                        <input type="submit" value="Submit" class="join-button">
-                    </div>
-                    <div class="required-field-b">
-                        <p>
-                            <span class="required-field">*</span>Fields required
-                        </p>
-                    </div>
-                </form>
+                        </div>
+                        <div class="form-control">
+                            <label for="subject">Subject:<span class="required-field">*</span></label>
+
+
+                            <input type="text" id="subject" name="subject_form" class="text-input subject" required>
+
+                        </div>
+                        <div class="form-control">
+                            <label for="commnets">Comments:<span class="required-field">*</span></label>
+
+
+                            <textarea id="comments" cols="20" rows="5" maxlength="500" name="commnents_form"
+                                class="text-input comments" required></textarea>
+
+                        </div>
+                        <div>
+                            <input type="submit" value="Submit" class="join-button">
+                        </div>
+                        <div class="required-field-b">
+                            <p>
+                                <span class="required-field">*</span>Fields required
+                            </p>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
