--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
 
         <div class="right-about">
-            <h3>Welcome to the Center for Special Treatments "Simeio"</h3>
+            <h2>Welcome to the Center for Special Treatments "Simeio"</h2>
             <p>
                 Four therapists starting from different points (different fields) joined their paths. Driven by
                 their love for their fellow man, vision and common values, they fulfilled their dream to create a space
@@ -188,7 +188,7 @@
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d757.3097164575439!2d22.9523887!3d40.6025532!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a8392823fc16bb%3A0x88798ef740c4f290!2sSpeech%20Therapy%20center!5e0!3m2!1sen!2suk!4v1679087569116!5m2!1sen!2suk"
                     width="400" height="150" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade">
+                    referrerpolicy="no-referrer-when-downgrade" title="pinpoint-map">
                 </iframe>
 
             </div>
